--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -1,45 +1,473 @@
 {
-  "nav": {
+  "login": {
+    "title": "تسجيل الدخول",
+    "email": "البريد الإلكتروني",
+    "password": "كلمة المرور",
+    "button": "دخول",
+    "loading": "جارٍ تسجيل الدخول...",
+    "failed": "فشل تسجيل الدخول",
+    "alt": "صورة تسجيل الدخول"
+  },
+  "navbar": {
     "home": "الرئيسية",
     "about": "من نحن",
     "services": "الخدمات",
-    "contact": "تواصل"
+    "contact": "تواصل معنا",
+    "signup": "إنشاء حساب",
+    "login": "تسجيل الدخول",
+    "profile": "الملف الشخصي",
+    "logout": "تسجيل الخروج"
   },
-  "home": {
-    "exploreTitle": "استكشف حسب الفئة",
-    "restaurants": "مطاعم",
-    "hotels": "فنادق",
-    "activities": "أنشطة وأماكن",
-    "shops": "متاجر",
-    "whyZiara": "لماذا زيــارة؟",
-    "bilingual": "ثنائي اللغة افتراضياً",
-    "smartRanking": "ترتيب ذكي",
-    "richReviews": "مراجعات غنية"
+  "validation": {
+    "invalidEmail": "البريد الإلكتروني غير صالح",
+    "requiredEmail": "البريد الإلكتروني مطلوب",
+    "shortPassword": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
+    "requiredPassword": "كلمة المرور مطلوبة"
   },
-  "contact": {
-    "title": "تواصل معنا",
-    "desc": "اختر خطة أو لديك أسئلة حول إضافة عملك على Ziara؟ أرسل لنا رسالة — نرد عادة خلال 24–48 ساعة.",
-    "fullName": "الاسم الكامل",
-    "email": "البريد الإلكتروني",
-    "subject": "الموضوع (اختياري)",
-    "message": "الرسالة",
-    "send": "إرسال"
-  },
-
-  "auth": {
-    "loginTitle": "تسجيل الدخول",
-    "signupTitle": "إنشاء حساب جديد",
+  "signup": {
+    "title": "إنشاء حساب",
+    "businessName": "اسم الشركة",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
     "confirmPassword": "تأكيد كلمة المرور",
-    "businessName": "اسم العمل",
-    "selectBusiness": "اختر نوع عملك",
-    "loginBtn": "تسجيل الدخول",
-    "signupBtn": "إنشاء حساب",
-    "noAccount": "ليس لديك حساب؟",
-    "haveAccount": "هل لديك حساب بالفعل؟",
-    "goSignup": "سجل من هنا",
-    "goLogin": "سجّل الدخول من هنا"
-  }
+    "passwordPlaceholder": "على الأقل 6 أحرف ورقم",
+    "confirmPlaceholder": "أعد إدخال كلمة المرور",
+    "business": "العمل",
+    "selectBusiness": "اختر عملك",
+    "button": "تسجيل",
+    "loading": "جارٍ إنشاء الحساب...",
+    "already": "هل لديك حساب؟",
+    "login": "تسجيل الدخول",
+    "alt": "صورة إنشاء حساب",
+    "businessOptions": {
+      "shop": "متجر",
+      "restaurant": "مطعم",
+      "hotel": "فندق",
+      "activity": "نشاط"
+    },
+    "validation": {
+      "businessName": "اسم الشركة مطلوب",
+      "shortPassword": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
+      "numberRequired": "كلمة المرور يجب أن تحتوي على رقم",
+      "requiredPassword": "كلمة المرور مطلوبة",
+      "passwordsMatch": "كلمتا المرور غير متطابقتين",
+      "confirmPassword": "تأكيد كلمة المرور مطلوب",
+      "business": "يرجى اختيار عملك"
+    }
+  },
+  "plan": {
+    "upgradeTitle": "قم بترقية خطتك",
+    "period": "دولار / شهر",
+    "current": "الخطة الحالية",
+    "thisCurrent": "هذه هي خطتك الحالية",
+    "currentPlan": "الخطة الحالية",
 
+    "features": {
+      "active": "اشتراك فعال",
+      "limit5": "حد الصور: 5",
+      "limit10": "حد الصور: 10",
+      "unlimited": "صور غير محدودة",
+      "normalRank": "ترتيب عادي في البحث",
+      "boost": "تعزيز عشوائي في البحث (أحياناً في الأعلى)",
+      "topRank": "الترتيب الأعلى (دائماً)"
+    },
+
+    "standard": {
+      "name": "الأساسية",
+      "cta": "احصل على الخطة الأساسية",
+      "subtitle": "للاستخدام اليومي"
+    },
+    "plus": {
+      "name": "بلَس",
+      "cta": "احصل على خطة بلس",
+      "tag": "الأكثر شيوعاً",
+      "subtitle": "وصول أكبر لترتيب متقدم"
+    },
+    "pro": {
+      "name": "برو",
+      "cta": "احصل على خطة برو",
+      "subtitle": "وصول كامل إلى الترتيب الأعلى"
+    }
+  },
+  "checkout": {
+    "subscribeTo": "اشترك في {{plan}}",
+    "month": "شهر",
+    "subtotal": "المجموع الفرعي",
+    "tax": "الضريبة",
+    "total": "الإجمالي المستحق اليوم",
+    "contactInfo": "معلومات الاتصال",
+    "paymentMethod": "طريقة الدفع",
+    "email": "البريد الإلكتروني",
+    "cardNumber": "1234 1234 1234 1234",
+    "expiry": "شهر / سنة",
+    "cvc": "رمز الأمان CVC",
+    "cardName": "اسم حامل البطاقة",
+    "payNow": "ادفع ${{price}} / شهر",
+    "agreement": "بالاشتراك، فإنك توافق على الشروط وتفوض تخزين طريقة الدفع للتجديدات.",
+    "failed": "فشل",
+    "paymentFailed": "فشلت عملية الدفع"
+  },
+  "profile": {
+    "unlimitedPhotos": "يمكنك رفع صور غير محدودة.",
+    "limitedPhotos": "يمكنك رفع فقط {{limit}} صور.",
+    "editProfileInfo": "تعديل معلومات الملف",
+    "changePhoto": "تغيير صورة الملف",
+    "description": "الوصف",
+    "editDescription": "تعديل الوصف",
+    "noDescription": "لا يوجد وصف",
+    "links": "الروابط والموقع",
+    "editLinks": "تعديل الروابط",
+    "instagram": "إنستغرام",
+    "facebook": "فيسبوك",
+    "location": "الموقع",
+    "menu": "القائمة",
+    "photos": "الصور",
+    "editPhotos": "تعديل الصور",
+    "uploadPhoto": "رفع صورة",
+    "deleteSelected": "حذف الصور المحددة",
+    "reviews": "التقييم والمراجعة",
+    "viewAllReviews": "عرض كل المراجعات",
+    "viewAll": "عرض الكل",
+    "reviewsCount": "مراجعات",
+    "ratingsCount": "تقييمات",
+    "upgradePlan": "ترقية خطتك",
+    "editPlan": "تعديل الخطة",
+    "subscribedPlan": "لقد اشتركت في: {{plan}} مع رسوم {{fee}}$"
+  },
+  "report": {
+    "title": "الإبلاغ عن مراجعة",
+    "back": "رجوع",
+    "unknownUser": "مستخدم غير معروف",
+    "choose": "اختر",
+    "submit": "إرسال البلاغ",
+    "submitting": "جارٍ الإرسال…",
+    "success": "تم إرسال البلاغ. شكراً لك.",
+    "fail": "تعذر إرسال البلاغ. يرجى المحاولة مرة أخرى.",
+    "offTopic": {
+      "title": "خارج الموضوع",
+      "desc": "المراجعة لا تتعلق بتجربة مع هذا النشاط التجاري"
+    },
+    "spam": {
+      "title": "رسائل مزعجة",
+      "desc": "المراجعة من روبوت أو حساب مزيف أو تحتوي على إعلانات وترويج"
+    },
+    "conflict": {
+      "title": "تضارب مصالح",
+      "desc": "المراجعة من شخص مرتبط بالنشاط أو من منافس"
+    },
+    "profanity": {
+      "title": "ألفاظ نابية",
+      "desc": "المراجعة تحتوي على شتائم أو لغة غير لائقة أو تفاصيل عنف صريح"
+    },
+    "hateSpeech": {
+      "title": "تمييز أو خطاب كراهية",
+      "desc": "المراجعة تحتوي على لغة ضارة ضد فرد أو مجموعة بناءً على الهوية"
+    }
+  },
+  "reviews": {
+    "title": "التقييم والمراجعات",
+    "summaryTitle": "ملخص المراجعات",
+    "loading": "جاري تحميل المراجعات…",
+    "totalReviews": "مراجعة",
+    "anonymous": "مستخدم مجهول",
+    "reviewBy": "مراجعة بواسطة",
+    "linkCopied": "تم نسخ الرابط إلى الحافظة!",
+    "star": "{{count}} نجمة",
+    "star_plural": "{{count}} نجمات",
+    "photo": "{{count}} صورة",
+    "photo_plural": "{{count}} صور",
+    "share": "مشاركة المراجعة",
+    "report": "الإبلاغ عن المراجعة",
+    "more": "المزيد",
+    "noReviews": "لا توجد مراجعات بعد."
+  },
+  "home": {
+    "hero": {
+      "kicker": "أهلاً بكم في زيارة",
+      "title": "اكتشف لبنان معاً.",
+      "subtitle": "تربط زيارة الزوار بالمطاعم المحلية، الفنادق، الأنشطة والأماكن، والمتاجر—من خلال تجربة بسيطة ثنائية اللغة عبر الويب والموبايل.",
+      "explore": "استكشف الخدمات"
+    },
+    "categories": {
+      "title": "اكتشف حسب الفئة",
+      "restaurants": {
+        "title": "مطاعم",
+        "item1": "رابط القائمة + صور",
+        "item2": "ساعات العمل، التوصيل والخريطة",
+        "item3": "التقييمات والمراجعات"
+      },
+      "hotels": {
+        "title": "فنادق",
+        "item1": "الغرف والمرافق",
+        "item2": "معرض الصور + الموقع الدقيق",
+        "item3": "رابط حجز خارجي"
+      },
+      "activities": {
+        "title": "أنشطة وأماكن",
+        "item1": "جولات ومعالم",
+        "item2": "مواعيد ومعلومات التذاكر",
+        "item3": "صور لا بد من رؤيتها"
+      },
+      "shops": {
+        "title": "متاجر",
+        "item1": "عرض المنتجات",
+        "item2": "نطاق الأسعار + وسائل التواصل",
+        "item3": "روابط التواصل الاجتماعي والموقع"
+      }
+    },
+    "why": {
+      "title": "لماذا زيارة؟",
+      "bilingual": {
+        "title": "ثنائية اللغة بشكل افتراضي",
+        "desc": "واجهة عربية/إنجليزية مع تبديل فوري بين LTR/RTL."
+      },
+      "ranking": {
+        "title": "ترتيب ذكي",
+        "desc": "الباقات تزيد من الظهور ليجدك الزائر المناسب."
+      },
+      "reviews": {
+        "title": "مراجعات غنية",
+        "desc": "مراجعات بالصور مع ردود المالك تبقي القوائم محدثة."
+      }
+    },
+    "final": {
+      "title": "جاهز للبدء؟",
+      "plans": "شاهد الباقات",
+      "about": "معلومات عنا",
+      "contact": "اتصل بنا"
+    }
+  },
+  "contact": {
+    "hero": {
+      "kicker": "اتصل بنا",
+      "title": "تواصل معنا.",
+      "subtitle": "هل تريد اختيار باقة أو لديك أسئلة حول إدراج عملك على زيارة؟ أرسل لنا رسالة — عادةً نرد خلال 24–48 ساعة."
+    },
+    "form": {
+      "name": "الاسم الكامل",
+      "email": "البريد الإلكتروني",
+      "subject": "الموضوع (اختياري)",
+      "message": "الرسالة",
+      "placeholders": {
+        "name": "محمد أحمد",
+        "email": "mohamed@example.com",
+        "subject": "كيف يمكننا مساعدتك؟",
+        "message": "اكتب رسالتك هنا..."
+      },
+      "send": "إرسال الرسالة",
+      "sending": "جاري الإرسال...",
+      "success": "تم إرسال رسالتك بنجاح. شكراً لك ✅",
+      "errors": {
+        "name": "يرجى إدخال اسمك.",
+        "email": "أدخل بريداً إلكترونياً صالحاً.",
+        "message": "لا يمكن أن تكون الرسالة فارغة.",
+        "failed": "فشل الإرسال. حاول مرة أخرى.",
+        "unknown": "حدث خطأ ما"
+      }
+    },
+    "info": {
+      "email": { "title": "البريد الإلكتروني" },
+      "support": { "title": "ساعات الدعم", "text": "الاثنين–الجمعة، 9:00–17:00" },
+      "list": {
+        "item1": "الشراكات والاشتراكات",
+        "item2": "المساعدة في الإدراج/التحقق",
+        "item3": "الإبلاغ عن مشكلة تقنية"
+      },
+      "note": "سنرد عبر البريد الإلكتروني في أقرب وقت ممكن."
+    }
+  },
+  "about": {
+    "hero": {
+      "kicker": "عن زيارة",
+      "title": "اكتشف لبنان معاً.",
+      "subtitle": "تربط زيارة الزوار بالأعمال المحلية — مطاعم، إقامات، أنشطة ومتاجر — من خلال تجربة ثنائية اللغة عبر الويب والموبايل."
+    },
+    "what": {
+      "title": "ما هي زيارة؟",
+      "visitors": {
+        "title": "تطبيق موبايل للزوار",
+        "desc": "ابحث حسب الفئة والموقع الجغرافي، احفظ المفضلات وانقلها إلى تمت زيارتها، واقرأ/اكتب مراجعات بالصور. الواجهة تدعم العربية/الإنجليزية."
+      },
+      "owners": {
+        "title": "موقع إلكتروني لأصحاب الأعمال",
+        "desc": "أنشئ ملفاً غنياً (صور، وصف، روابط، خريطة؛ المطاعم تضيف رابط القائمة)، اختر باقة لزيادة الظهور، ورد على المراجعات."
+      },
+      "admin": {
+        "title": "لوحة تحكم المدير",
+        "desc": "إدارة الحسابات، مراجعة التقارير، وتنسيق الأماكن السياحية/الدينية للحفاظ على النظام."
+      }
+    },
+    "sync": {
+      "title": "الموقع × الموبايل: نظام واحد",
+      "item1": "التحديثات على الموقع تظهر فوراً في التطبيق.",
+      "item2": "مراجعات وصور التطبيق تظهر على الموقع؛ يمكن للأصحاب الرد.",
+      "item3": "الباقات المختارة على الموقع تؤثر على الترتيب والحدود داخل التطبيق."
+    },
+    "cards": {
+      "visitors": {
+        "title": "للزوار",
+        "item1": "اكتشف الأماكن القريبة حسب الفئة والموقع",
+        "item2": "احفظ المفضلات → وانقلها إلى تمت زيارتها بعد رحلتك",
+        "item3": "اقرأ واكتب مراجعات صادقة بالصور"
+      },
+      "owners": {
+        "title": "لأصحاب الأعمال",
+        "item1": "ملف احترافي مع صور، وصف، روابط وخريطة",
+        "item2": "مناسب للمطاعم: أضف رابط قائمتك العامة",
+        "item3": "باقات مرنة لزيادة الظهور في التطبيق"
+      }
+    },
+    "trust": {
+      "title": "الثقة والأمان",
+      "desc": "يمكن للمستخدمين الإبلاغ عن المحتوى غير المرغوب فيه أو المسيء. أدوات المدير تبقي زيارة عادلة ومفيدة للجميع."
+    }
+  },
+  "services": {
+    "hero": {
+      "kicker": "الخدمات",
+      "title": "اكتشف لبنان معاً.",
+      "subtitle": "اختر باقة وقم بإدراج عملك — مطاعم، فنادق، أنشطة وأماكن، ومتاجر."
+    },
+    "who": {
+      "title": "من نخدم"
+    },
+    "businesses": {
+      "restaurants": {
+        "title": "مطاعم",
+        "item1": "رابط القائمة + صور الأطباق (حسب حد الباقة).",
+        "item2": "ساعات العمل، معلومات التوصيل/الاستلام، وخريطة الموقع.",
+        "item3": "يمكن للعملاء التقييم وكتابة المراجعات؛ يمكنك الرد عليها."
+      },
+      "hotels": {
+        "title": "فنادق",
+        "item1": "عرض أنواع الغرف، المرافق، وأهم الميزات.",
+        "item2": "إضافة معرض صور وتثبيت موقعك على الخريطة.",
+        "item3": "إرفاق رابط حجز خارجي إذا توفر."
+      },
+      "activities": {
+        "title": "أنشطة وأماكن",
+        "item1": "جولات، معالم، متاحف، وأماكن تاريخية توضح ما سيجده الزوار.",
+        "item2": "إضافة المواعيد، معلومات التذاكر (إن وجدت)، وصور مميزة.",
+        "item3": "يمكن للزوار الإضافة للمفضلة، التقييم، وترك تعليقات."
+      },
+      "shops": {
+        "title": "متاجر",
+        "item1": "عرض أفضل المنتجات مع وصف قصير.",
+        "item2": "إضافة نطاق الأسعار ووسائل الاتصال.",
+        "item3": "روابط لوسائل التواصل الاجتماعي والموقع."
+      }
+    },
+    "plans": {
+      "title": "الباقات",
+      "subtitle": "اختر الباقة التي تناسبك. يمكنك الترقية في أي وقت.",
+      "standard": {
+        "name": "الأساسية",
+        "subtitle": "للإدراج اليومي",
+        "item1": "اشتراك نشط",
+        "item2": "حد الصور: 5",
+        "item3": "ترتيب بحث عادي"
+      },
+      "plus": {
+        "name": "بلَس",
+        "subtitle": "وصول أكبر لترتيب متقدم",
+        "badge": "الأكثر شيوعاً",
+        "item1": "اشتراك نشط",
+        "item2": "حد الصور: 10",
+        "item3": "دفعة عشوائية في البحث (أحياناً في الأعلى)"
+      },
+      "pro": {
+        "name": "متقدمة",
+        "subtitle": "وصول كامل لأعلى ترتيب",
+        "item1": "اشتراك نشط",
+        "item2": "صور غير محدودة",
+        "item3": "ترتيب أعلى (دائماً)"
+      }
+    },
+    "cta": {
+      "title": "جاهز للنمو مع زيارة؟",
+      "subtitle": "أنشئ حساباً أو تواصل مع فريقنا في أي وقت.",
+      "contact": "اتصل بنا"
+    }
+  },
+  "signupButton": {
+    "create": "إنشاء حساب",
+    "profile": "الانتقال إلى الملف الشخصي"
+  },
+  "carousel": {
+    "slide1": {
+      "title": "زيارة",
+      "desc": "اكتشف لبنان بطريقة جديدة كلياً."
+    },
+    "slide2": {
+      "title": "اكتشف لبنان كما لم تفعل من قبل",
+      "desc": "استكشف الجواهر المخفية، العجائب الثقافية، والتجارب المحلية — كلها في تطبيق واحد."
+    },
+    "slide3": {
+      "title": "من الآثار القديمة إلى الأماكن المقدسة",
+      "desc": "قم بزيارة تاريخ لبنان الغني ومعالمه الروحية المتنوعة."
+    },
+    "slide4": {
+      "title": "اسأل السكان المحليين، واحصل على نصائحهم",
+      "desc": "تحدث، اطرح أسئلة، أو اكتشف أماكن جديدة — كل ذلك عبر الدردشة الذكية."
+    },
+    "slide5": {
+      "title": "تذوّق لبنان كالأهالي",
+      "desc": "اكتشف المطاعم اللبنانية التقليدية وأشهر أكلات الشارع."
+    },
+    "slide6": {
+      "title": "ادعم المحليين وخذ ذكرى معك",
+      "desc": "تصفح التذكارات والحرف اليدوية من الأعمال اللبنانية الصغيرة."
+    }
+  }, 
+   "editProfile": {
+    "title": "تعديل الملف الشخصي",
+    "name": {
+      "label": "تعديل اسم العمل",
+      "placeholder": "أدخل اسم عمل جديد"
+    },
+    "city": {
+      "label": "تعديل المدينة",
+      "placeholder": "أدخل موقعاً جديداً"
+    },
+    "save": "حفظ"
+  },
+  "editLinks": {
+    "title": "تعديل الروابط والموقع",
+    "instagram": {
+      "label": "تعديل إنستغرام",
+      "placeholder": "أدخل رابط حسابك على إنستغرام"
+    },
+    "facebook": {
+      "label": "تعديل فيسبوك",
+      "placeholder": "أدخل رابط حسابك على فيسبوك"
+    },
+    "location": {
+      "label": "تعديل الموقع",
+      "placeholder": "أدخل موقعك"
+    },
+    "menu": {
+      "label": "القائمة (الرابط)",
+      "placeholder": "https://your-restaurant.com/menu"
+    },
+    "save": "حفظ"
+  },
+  "editDescription": {
+    "title": "تعديل الوصف",
+    "placeholder": "أدخل وصفك الجديد",
+    "save": "حفظ"
+  }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
