--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -111,7 +111,8 @@
       "login_required": "تسجيل الدخول مطلوب",
     "login_message": "يجب أن تكون مسجلاً للدخول لتعديل ملفك الشخصي. هل ترغب في إنشاء حساب؟",
       "SuggestedPlaces": "أماكن مقترحة",
-        "trip": "رحلة"
+        "trip": "رحلة",
+        "callus": "اتصل بنا"
       
 
 
