--- a/frontend/src/screens/locales/en.json
+++ b/frontend/src/screens/locales/en.json
@@ -111,11 +111,11 @@
     "signup": "Sign Up",
      "login_required": "Login Required",
      "SuggestedPlaces": "Suggested Places",
-     "login_message": "You must be logged in to edit your profile. Would you like to create an account?"
+     "login_message": "You must be logged in to edit your profile. Would you like to create an account?",
 
 
   
-
+  "callus": "Call us"
 
  
 
