--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -3,10 +3,17 @@
     "title": "تسجيل الدخول",
     "email": "البريد الإلكتروني",
     "password": "كلمة المرور",
-    "button": "دخول",
+    "button": "تسجيل الدخول",
     "loading": "جارٍ تسجيل الدخول...",
-    "failed": "فشل تسجيل الدخول",
-    "alt": "صورة تسجيل الدخول"
+    "failed": "فشل تسجيل الدخول. حاول مرة أخرى.",
+    "alt": "صورة تسجيل الدخول",
+    "forgotPassword": "نسيت كلمة المرور؟"
+  },
+  "validation": {
+    "invalidEmail": "بريد إلكتروني غير صالح",
+    "requiredEmail": "البريد الإلكتروني مطلوب",
+    "shortPassword": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
+    "requiredPassword": "كلمة المرور مطلوبة"
   },
   "navbar": {
     "home": "الرئيسية",
@@ -17,13 +24,7 @@
     "login": "تسجيل الدخول",
     "profile": "الملف الشخصي",
     "logout": "تسجيل الخروج"
-  },
-  "validation": {
-    "invalidEmail": "البريد الإلكتروني غير صالح",
-    "requiredEmail": "البريد الإلكتروني مطلوب",
-    "shortPassword": "كلمة المرور يجب أن تكون 6 أحرف على الأقل",
-    "requiredPassword": "كلمة المرور مطلوبة"
-  },
+},
   "signup": {
     "title": "إنشاء حساب",
     "businessName": "اسم الشركة",
@@ -455,8 +456,43 @@
     "title": "تعديل الوصف",
     "placeholder": "أدخل وصفك الجديد",
     "save": "حفظ"
+  },
+  "forgot": {
+    "title": "نسيت كلمة المرور",
+    "email": "أدخل بريدك الإلكتروني",
+    "button": "إرسال الرمز",
+    "loading": "جاري الإرسال...",
+    "success": "تم إرسال رمز إعادة التعيين إلى بريدك الإلكتروني",
+    "failed": "حدث خطأ ما"
+  },
+  "reset": {
+    "title": "إعادة تعيين كلمة المرور",
+    "pin": "أدخل الرمز المكون من 6 أرقام",
+    "verifyCode": "تحقق من الرمز",
+    "password": "كلمة المرور الجديدة",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "button": "تغيير كلمة المرور",
+    "loading": "جاري المعالجة...",
+    "success": "تم تحديث كلمة المرور بنجاح",
+    "failed": "الرمز غير صحيح أو منتهي الصلاحية",
+    "codeAccepted": "تم التحقق من الرمز، الرجاء إدخال كلمة المرور الجديدة",
+    "validation": {
+      "pinLength": "يجب أن يتكون الرمز من 6 أرقام",
+      "pinRequired": "الرمز مطلوب",
+      "shortPassword": "يجب أن تتكون كلمة المرور من 6 أحرف على الأقل",
+      "numberRequired": "يجب أن تحتوي كلمة المرور على رقم واحد على الأقل",
+      "requiredPassword": "كلمة المرور مطلوبة",
+      "confirmPassword": "الرجاء تأكيد كلمة المرور",
+      "passwordsMatch": "يجب أن تتطابق كلمتا المرور"
+    }
+  },
+  "validation": {
+    "invalidEmail": "البريد الإلكتروني غير صالح",
+    "requiredEmail": "البريد الإلكتروني مطلوب"
   }
 }
+
+
 
 
 
