--- a/client/src/locales/ar.json
+++ b/client/src/locales/ar.json
@@ -54,7 +54,11 @@
       "passwordsMatch": "كلمتا المرور غير متطابقتين",
       "confirmPassword": "تأكيد كلمة المرور مطلوب",
       "business": "يرجى اختيار عملك"
-    }
+    },  "errors": {
+    "invalidEmail": "البريد الإلكتروني غير صالح",
+    "exists": "هذا البريد الإلكتروني مسجّل مسبقًا",
+    "general": "فشل التسجيل، يرجى المحاولة لاحقًا"
+  }
   },
   "plan": {
     "upgradeTitle": "قم بترقية خطتك",
