changing search placeholder

--- a/frontend/src/screens/locales/ar.json
+++ b/frontend/src/screens/locales/ar.json
@@ -112,7 +112,13 @@
     "login_message": "يجب أن تكون مسجلاً للدخول لتعديل ملفك الشخصي. هل ترغب في إنشاء حساب؟",
       "SuggestedPlaces": "أماكن مقترحة",
         "trip": "رحلة",
-        "callus": "اتصل بنا"
+        "callus": "اتصل بنا",
+   
+   
+    "searchCityPlaceName": "ابحث حسب المدينة أو اسم المكان"
+  
+
+
       
 
 
